medicines/api/manifests/overlays/prod/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: medicines-api
  namespace: medicines-api
spec:
  hosts:
    - medicines.api.mhra.gov.uk
  gateways:
    - istio-system/medicines-api-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: medicines-api
      corsPolicy:
        allowOrigins:
          - prefix: "*"
        allowMethods:
          - GET
          - POST
        allowHeaders:
          - Authorization
          - Accept
          - Content-Type
        maxAge: "24h"
